<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg_main"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/rl_device_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_orange_main" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:drawableLeft="@drawable/ic_action_previous_item"
            android:gravity="center_vertical"
            android:clickable="true"
            android:text="@string/back"
            android:textColor="@drawable/selector_save"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            
            android:text="@string/clip_title"
            android:textColor="@drawable/selector_save"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:clickable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/save"
                android:textColor="@drawable/selector_save" />
        </RelativeLayout>
    </RelativeLayout>
    <com.mycj.beasun.view.clip.ClipImageLayout 
        android:id="@+id/clip_img"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        ></com.mycj.beasun.view.clip.ClipImageLayout>

</LinearLayout>